<resources>
    <string name="app_name">Freshman</string>

    <string name="freshman_error_soft">开发组：获取数据出了些错误呢！\n或许要检查一下网络环境？</string>

    <string name="freshmen_admission_title">入学必备</string>
    <string name="freshmen_admission_edit">编辑</string>
    <string name="freshmen_admission_delete">删除</string>
    <string name="freshmen_admission_add">添加</string>
    <string name="freshmen_admission_add_hint">请输入待办事项(不超过14字)</string>

    <string name="freshmen_admission_hint_title">功能介绍</string>
    <string name="freshmen_admission_hint_a">1.文本框右侧【箭头】查看每一项任务具体详情。</string>
    <string name="freshmen_admission_hint_b">2.右上角的【编辑】，通过勾选进行选择性删除（未标识可删除圆圈的则为报道必需）。</string>
    <string name="freshmen_admission_hint_c">3.点击左侧【空方框】勾选该项即为完成，再次单击即可恢复。</string>
    <string name="freshmen_admission_hint_d">4.右下角【加号】图样可自定义添加新待办。</string>

    <string name="freshman_military_photo">军训图片</string>
    <string name="freshman_military_video">军训视频</string>

    <string name="freshman_main_welcome">迎新</string>

    <string name="freshman_campus_data_detail_sex">男女比例</string>
    <string name="freshman_campus_data_detail_difficult">最难科目</string>
    <string name="freshman_campus_data_title_subject">2017–2018第二学期最难科目挂科百分比</string>
    <string name="freshman_top5_cate">最受好评的TOP5家美食</string>

</resources>
